--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,14 +1,20 @@
 alembic==1.17.2
 blinker==1.9.0
 click==8.3.1
+exceptiongroup==1.3.1
 Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==9.0.1
 python-dotenv==1.2.1
 SQLAlchemy==2.0.44
 tomli==2.3.0
