--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.17.2
 blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
 exceptiongroup==1.3.1
 Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
+idna==3.11
 iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -16,7 +19,9 @@ pluggy==1.6.0
 Pygments==2.19.2
 pytest==9.0.1
 python-dotenv==1.2.1
+requests==2.32.5
 SQLAlchemy==2.0.44
 tomli==2.3.0
 typing_extensions==4.15.0
+urllib3==2.6.0
 Werkzeug==3.1.3
