--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -9,6 +9,7 @@ Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
+gunicorn==23.0.0
 idna==3.11
 iniconfig==2.3.0
 itsdangerous==2.2.0
